<resources>
    <string name="app_name">EREFUGEES</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="courses">Courses</string>
    <string name="log_out">Log Out</string>
    <string name="chat">Chat</string>
    <string name="video">Video Conference</string>
    <string name="exam">Examinations</string>
    <string name="blog">Stundent Blog</string>
    <string name="certificate">My Certificates</string>
    <string name="profile">Profile</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>

    <string name="first">FirstName</string>
    <string name="last">LastName</string>

    <string name="create">Don\'t Have An Account? Create One</string>
    <string name="loginReq">Already Have An Account? Login</string>

    <string name="message">Type Your message</string>
    <string name="send">SEND</string>

    <string name="createAcc">CREATE ACCOUNT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
