<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_courses">

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.erefugees.ui.courses.CoursesFragment"
        android:label="@string/courses"
        tools:layout="@layout/fragment_coures">
    </fragment>

    <fragment
        android:id="@+id/nav_exam"
        android:name="com.example.erefugees.ui.examination.ExaminationFragment"
        android:label="@string/exam"
        tools:layout="@layout/fragment_examination" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.erefugees.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.erefugees.ui.video.VideoConference"
        android:label="@string/video"
        tools:layout="@layout/fragment_video_conference">
    </fragment>

    <fragment
        android:id="@+id/nav_blog"
        android:name="com.example.erefugees.ui.blog.Blogs"
        android:label="@string/blog"
        tools:layout="@layout/fragment_blogs" />

    <fragment
        android:id="@+id/nav_certificate"
        android:name="com.example.erefugees.ui.certificates.MyCertificates"
        android:label="@string/certificate"
        tools:layout="@layout/fragment_my_certificates" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.erefugees.ui.profile.Profile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>